--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,7 @@
 {
   "builds": [{ "src": "main.py", "use": "@vercel/python" }],
   "routes": [{ "src": "/(.*)", "dest": "main.py" }],
-  "excludeFiles": [
-    "**/*.pyc",
-    "**/__pycache__/**",
-    ".env",
-    ".git/**",
-    ".venv/**",
-    "automations/**",
-    "docs/**",
-    "logdir/**",
-    "tests/**",
-    "prisma/migrations/**",
-    "Dockerfile",
-    "README.md",
-    "pytest.ini",
-    "package.json",
-    "data/**",
-    "data_scraping_script/**"
-  ]
+  "env": {
+    "APP_MODULE": "main:app"
+  }
 }
