--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,4 @@
 {
   "builds": [{ "src": "main.py", "use": "@vercel/python" }],
-  "routes": [{ "src": "/(.*)", "dest": "main.py" }],
-  "env": {
-    "APP_MODULE": "main:app"
-  }
+  "routes": [{ "src": "/(.*)", "dest": "main.py" }]
 }
