--- a/project-tds-virtual-ta-promptfoo.yaml
+++ b/project-tds-virtual-ta-promptfoo.yaml
@@ -3,7 +3,7 @@ description: "TDS Virtual TA Project Sample (but not the actual evaluation) Ques
 providers:
   - id: https
     config:
-      url: https://organic-fortnight-69575jvxqj5624rpw-8000.app.github.dev/api/ # Replace this with your API endpoint
+      url: https://xxxxxx.vercel.app/api/ # Replace this with your API endpoint
       method: POST
       headers:
         Content-Type: application/json
